<resources>
    <string name="app_name">Sportify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clg_name">Chameli Devi Group Of Institution</string>
    <string name="welcome">Welcome</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">login</string>
    <string name="login_here">Login Here</string>


</resources>