<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_above="@id/card_view"
        android:padding="28dp"
        app:drawableTopCompat="@drawable/cdgi"
        android:background="@color/my_primary"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-28dp"
        app:cardCornerRadius="28dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_here"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:autofillHints="emailAddress"
                android:drawableEnd="@drawable/done_icon"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:minHeight="55dp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:autofillHints="password"
                android:drawableEnd="@drawable/password_icon"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="55dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                app:cornerRadius="32dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>